Updated years of experience Moved link below metas for performance :shrug:

--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
     <meta name="author" content="Eustace R Mann Jr">
     <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, Jr, Eustace, EJ, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj">
-
-    <link rel="author" href="https://plus.google.com/+EJMann"/>
 
     <meta property='og:title' content="Eustace R Mann Jr" />
     <meta property="og:image" content="http://ejmanngamedev.com/img/linkedin/webvrplaygroundlinkedin.png" />
@@ -31,6 +28,8 @@
     <meta name="twitter:image" content="http://ejmanngamedev.com/img/linkedin/webvrplaygroundlinkedin.png">
 
     <title>Eustace R Mann Jr</title>
+
+    <link rel="author" href="https://plus.google.com/+EJMann"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -443,7 +442,7 @@
                             </tr>
                             <tr>
                                 <td>Three.js</td>
-                                <td>1</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>Node.js</td>
@@ -522,27 +521,27 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Web-VR (A-Frame)</td>
+                                <td>A-Frame Web-VR</td>
                                 <td>2</td>
                             </tr>
                             <tr>
-                                <td>Oculus Rift (Unity)</td>
+                                <td>Oculus Rift</td>
                                 <td>2</td>
                             </tr>
                             <tr>
-                                <td>HTC Vive (Unity)</td>
+                                <td>HTC Vive</td>
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>Google Daydream (Unity)</td>
+                                <td>Google Daydream</td>
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>Samsung Gear (Unity)</td>
+                                <td>Samsung Gear</td>
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>Microsoft HoloLens (Unity)</td>
+                                <td>Microsoft HoloLens</td>
                                 <td>1</td>
                             </tr>
                         </tbody>
