Updated index for 1/23/2019

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 </head>
 
 <body id="page-top">
-
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -405,6 +404,14 @@
                                 <td>7</td>
                             </tr>
                             <tr>
+                                <td>HTML</td>
+                                <td>6</td>
+                            </tr>
+                            <tr>
+                                <td>CSS</td>
+                                <td>5</td>
+                            </tr>
+                            <tr>
                                 <td>Javascript</td>
                                 <td>5</td>
                             </tr>
@@ -421,6 +428,18 @@
                                 <td>2</td>
                             </tr>
                             <tr>
+                                <td>Blender</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Three.js</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>JQuery</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
                                 <td>Objective C</td>
                                 <td>1</td>
                             </tr>
@@ -429,29 +448,14 @@
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>HTML</td>
-                                <td>6</td>
-                            </tr>
-                            <tr>
-                                <td>CSS</td>
-                                <td>5</td>
-                            </tr>
-                            <tr>
-                                <td>JQuery</td>
-                                <td>2</td>
-                            </tr>
-                            <tr>
-                                <td>Three.js</td>
-                                <td>2</td>
+                                <td>Python</td>
+                                <td>1</td>
                             </tr>
                             <tr>
                                 <td>Node.js</td>
                                 <td>1</td>
                             </tr>
-                            <tr>
-                                <td>Python</td>
-                                <td>1</td>
-                            </tr>
+
                             <tr>
                                 <td>Bootstrap</td>
                                 <td>1</td>
@@ -529,11 +533,15 @@
                                 <td>2</td>
                             </tr>
                             <tr>
-                                <td>HTC Vive</td>
+                                <td>Google Daydream</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Magic Leap AR</td>
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>Google Daydream</td>
+                                <td>HTC Vive</td>
                                 <td>1</td>
                             </tr>
                             <tr>
