--- a/index.html
+++ b/index.html
@@ -609,19 +609,29 @@
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
 
-    <aside class="bg-dark aside" id="web-vr" style="margin-bottom: -100px">
+    <aside class="bg-dark aside" id="web-vr" style="margin-bottom: -100px;padding-top:50px;">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Check out a cool 360 snapshot I took at Ultra Music Festival 2017!</br></br>Click and hold to move the Web-VR screen below to view from any angle!</h2>
+                <h2>Time to have some fun!. I've created 2 worlds for you to explore.</br></br>Click the window & press spacebar.</br>Press escape to move around the site again.</br>Use your mouse to look, arrow keys to move, & spacebar to jump.</br>Walk through the particles behind your starting point to explore 2 giant maps!</h2>
             </div>
         </div>
     </aside>
 
-    <div style="width: 100%; height: 50%; float:right; margin-top:100px; padding-bottom:100px; padding-left:20%; padding-right: 20%; background-color: #444;">
-        <a-scene embedded>
+    <!-- <div style="width: 100%; height: 50%; float:right; margin-top:100px; padding-bottom:100px; padding-left:20%; padding-right: 20%; background-color: #444;"> -->
+        <!-- VR Miami Ultra -->
+        <!-- <a-scene embedded>
             <a-sky src="img/ultra.jpg"></a-sky>
             <a-entity camera look-controls></a-entity>
-        </a-scene>
+        </a-scene> -->
+    <!-- </div> -->
+
+    <div style="width: 100%; height: 70%; float:right; margin-top:0px; padding-bottom:0px; padding-left:20%; padding-right: 20%; background-color: #444;">
+      <embed src="WebVersion/index.html" style="width:1600px; height: 900px;">
+        <!-- VR Miami Ultra -->
+        <!-- <a-scene embedded>
+            <a-sky src="img/ultra.jpg"></a-sky>
+            <a-entity camera look-controls></a-entity>
+        </a-scene> -->
     </div>
 
 </body>
