Unity Game now works on mobile / different resolutions

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
 
-    <aside class="bg-dark aside" id="web-vr" style="margin-bottom: -100px;padding-top:50px;">
+    <aside class="bg-dark aside" id="web-vr" style="margin-bottom: 0px;padding-top:100px;">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Time to have some fun!. I've created 2 worlds for you to explore.</br></br>Click the window & press spacebar.</br>Press escape to move around the site again.</br>Use your mouse to look, arrow keys to move, & spacebar to jump.</br>Walk through the particles behind your starting point to explore 2 giant maps!</h2>
@@ -625,8 +625,8 @@
         </a-scene> -->
     <!-- </div> -->
 
-    <div style="width: 100%; height: 70%; float:right; margin-top:0px; padding-bottom:0px; padding-left:20%; padding-right: 20%; background-color: #444;">
-      <embed src="WebVersion/index.html" style="width:1600px; height: 900px;">
+    <div style="width: 100%; height: 70%; float:right; margin-top:0px; padding-bottom:-25px; padding-left:20%; padding-right: 20%; background-color: #444;">
+      <embed src="WebVersion/index.html" style="width:100%; height: 70%; overflow:hidden; padding-bottom:-50px;">
         <!-- VR Miami Ultra -->
         <!-- <a-scene embedded>
             <a-sky src="img/ultra.jpg"></a-sky>
