Update bio for 2020

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About EJ</h2>
                     <hr class="light">
-                    <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way in his career. During his undergraduate career at Lehigh University, EJ worked hard as a software auditor for Lehigh's Center of Advanced Materials and Nanotechnology through Lehigh's work study program. After receiving his Bachelor's in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then helped develop the AAA Northampton County Website through an internship.</p>
-                    <p class="text-faded">After receiving his Master's, he began developing touch screen menus and SQL databases for bars and restaurants. Soon after that, EJ was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
-                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's new 360 virtual reality experience!</p>
-                    <p class="text-faded">In his free time, EJ plays piano, produces his own music, and develops games for the indie game development company, Lucky Shot Media.</p>
-                    <p class="text-faded"> The only thing left for him to do is develop a AAA game title, a goal he has his mind set on.</p>
+                    <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center of Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
+                    <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at a company known as Harbortouch. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
+                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's newest virtual and mixed reality experiences!</p>
+                    <p class="text-faded">In his free time, EJ produces his own music, practices wing chun kung fu, and develops his own video games.</p>
+                    <p class="text-faded">Only one goal remains, developing a AAA game title for a major game studio, a goal he has his mind set on.</p>
                     <!--<a href="#projects" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
                 </div>
             </div>
