Update skills for 2020

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                 <td>2</td>
                             </tr>
                             <tr>
-                                <td>Blender</td>
+                                <td>High Level Shader Language</td>
                                 <td>2</td>
                             </tr>
                             <tr>
@@ -513,6 +513,10 @@
                             <tr>
                                 <td>Unreal Engine</td>
                                 <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Blender</td>
+                                <td>2</td>
                             </tr>
                         </tbody>
                     </table>
