--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Certified Scrum Master specializing in Virtual Reality & Game Development</h1>
+                <h1 id="homeHeading">Certified Scrum Master <br/>in Virtual Reality & Games</h1>
                 <hr>
                 <p>Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p>
                 <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
@@ -139,6 +139,19 @@
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">Xfinity VR</div>
                                 <div class="project-category text-faded">A virtual reality app made with Unity that brings Comcast's 360 video library to the Samsung Gear and Google Daydream</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="https://fusion.crswll.now.sh/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/food_league.png" class="img-responsive" alt="League of Food Comcast Concept">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">Comcast Fusion Arena Concept App</div>
+                                    <div class="project-category text-faded">A web based mobile app concept for the new Comcast Fusion E-Sports Arena! This app contains a unity game and other cool features for purchasing items and getting discounts on the top items! Best viewed on mobile.</div>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -195,7 +208,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3">
+                <!-- <div class="col-lg-3">
                     <a href="https://180-vr-player.glitch.me/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/11.png" class="img-responsive" alt="180 Degree VR Movie Player">
                         <div class="portfolio-box-caption">
@@ -207,7 +220,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <div class="col-lg-3">
                     <a href="https://scene-generator.glitch.me/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="Scene Generator">
@@ -631,6 +644,7 @@
 
     <div style="width: 100%; height: 70%; float:right; margin-top:0px; padding-bottom:-25px; padding-left:20%; padding-right: 20%; background-color: #444;">
       <embed src="WebVersion/index.html" style="width:100%; height: 70%; overflow:hidden; padding-bottom:-50px;">
+        
         <!-- VR Miami Ultra -->
         <!-- <a-scene embedded>
             <a-sky src="img/ultra.jpg"></a-sky>
