begin scrolling logic
added scrolling logic
added new ids for apps section

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         </div>
     </aside>
 
-    <section class="no-padding" style="background-color: #444444">
-        <div class="container-fluid">
-            <div class="row no-gutter"> <!--popup-gallery-->
+    <section id="app_section" class="no-padding" style="background-color: #444444">
+        <div id="app_container" class="container-fluid">
+            <div id="app_collection" class="row no-gutter"> <!--popup-gallery-->
                 <div class="col-lg-3">
                     <a href="videos/xvrtrailer.mp4" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/1.png" class="img-responsive" alt="Xfinity VR">
@@ -615,6 +615,7 @@
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="js/app_animator.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
