--- a/index.html
+++ b/index.html
@@ -196,31 +196,18 @@
                     </a>
                 </div>
                 <div class="col-lg-3">
-                    <a href="https://comcast-labs-ar-room.glitch.me/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/10.png" class="img-responsive" alt="Augmented Reality Model">
+                    <a href="/mariocastle.html" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/10.png" class="img-responsive" alt="Castle Animation made with Unity">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
-                                    <div class="project-name">Augmented Reality Model</div>
-                                    <div class="project-category text-faded">A reconstucted model of an old workroom using Android's augmented reality constructor & A-Frame Web VR</div>
+                                    <div class="project-name">Castle Animation</div>
+                                    <div class="project-category text-faded">An animated reconstruction of a familiar video game.</div>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-3">
-                    <a href="https://180-vr-player.glitch.me/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/11.png" class="img-responsive" alt="180 Degree VR Movie Player">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-name">180 Degree VR Movie Player</div>
-                                    <div class="project-category text-faded">180 Degree Movie Player developed for Web VR</div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
                 <div class="col-lg-3">
                     <a href="https://scene-generator.glitch.me/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="Scene Generator">
