--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3">
-                    <a href="/mariocastle.html" class="portfolio-box" target="_blank">
+                    <a href="MarioCastleAnimation/mariocastle.html" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/10.png" class="img-responsive" alt="Castle Animation made with Unity">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
