--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
                 </div>
                 <div class="col-lg-3">
                     <a href="MarioCastleAnimation/mariocastle.html" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/10.png" class="img-responsive" alt="Castle Animation made with Unity">
+                        <img src="img/portfolio/thumbnails/mario_castle.png" class="img-responsive" alt="Castle Animation made with Unity">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-name">Castle Animation</div>
-                                    <div class="project-category text-faded">An animated reconstruction of a familiar video game.</div>
+                                    <div class="project-category text-faded">An animated reconstruction of a familiar video game built with Unity</div>
                                 </div>
                             </div>
                         </div>
