fixed scrolling isue

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section id="app_section" class="no-padding" style="background-color: #444444">
         <div id="app_container">
             <div id="app_collection" class="row" style="width: 2000px;"> <!--popup-gallery-->
-                <div id="scroller" style="width: 2000px; height: 400px; margin: 0 auto;">
+                <div id="scroller" style="height: 400px; margin: 0 auto;">
                     <div id="app_list_1" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
@@ -175,13 +175,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/7.png" class="img_scroller" alt="A-Frame Web VR Playground">
+                                <a href="MarioCastleAnimation/mariocastle.html" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/mario_castle.png" class="img_scroller" alt="Castle Animation made with Unity">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
-                                                <div class="project-name">A-Frame Web VR Playground</div>
-                                                <div class="project-category text-faded">A Web VR playground where the user can move around and stretch objects using the Oculus Rift</div>
+                                                <div class="project-name">Castle Animation</div>
+                                                <div class="project-category text-faded">An animated reconstruction of a familiar video game built with Unity</div>
                                             </div>
                                         </div>
                                     </div>
@@ -201,13 +201,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://comcast-labs-ar-room.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/10.png" class="img_scroller" alt="Augmented Reality Model">
+                                <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/7.png" class="img_scroller" alt="A-Frame Web VR Playground">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
-                                                <div class="project-name">Augmented Reality Model</div>
-                                                <div class="project-category text-faded">A reconstucted model of an old workroom using Android's augmented reality constructor & A-Frame Web VR</div>
+                                                <div class="project-name">A-Frame Web VR Playground</div>
+                                                <div class="project-category text-faded">A Web VR playground where the user can move around and stretch objects using the Oculus Rift</div>
                                             </div>
                                         </div>
                                     </div>
@@ -216,7 +216,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="scroller2" style="width: 2000px; height: 400px; margin: 0 auto;">
+                <div id="scroller2" style="height: 400px; margin: 0 auto;">
                     <div id="app_list_2" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
@@ -628,32 +628,6 @@
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
-
-    <aside class="bg-dark aside" id="web-vr" style="margin-bottom: 0px;padding-top:100px;">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Time to have some fun!. I've created 2 worlds for you to explore.</br></br>Click the window & press spacebar.</br>Press escape to move around the site again.</br>Use your mouse to look, arrow keys to move, & spacebar to jump.</br>Walk through the particles behind your starting point to explore 2 giant maps!</h2>
-            </div>
-        </div>
-    </aside>
-
-    <!-- <div style="width: 100%; height: 50%; float:right; margin-top:100px; padding-bottom:100px; padding-left:20%; padding-right: 20%; background-color: #444;"> -->
-        <!-- VR Miami Ultra -->
-        <!-- <a-scene embedded>
-            <a-sky src="img/ultra.jpg"></a-sky>
-            <a-entity camera look-controls></a-entity>
-        </a-scene> -->
-    <!-- </div> -->
-
-    <div style="width: 100%; height: 70%; float:right; margin-top:0px; padding-bottom:-25px; padding-left:20%; padding-right: 20%; background-color: #444;">
-      <embed src="WebVersion/index.html" style="width:100%; height: 70%; overflow:hidden; padding-bottom:-50px;">
-        
-        <!-- VR Miami Ultra -->
-        <!-- <a-scene embedded>
-            <a-sky src="img/ultra.jpg"></a-sky>
-            <a-entity camera look-controls></a-entity>
-        </a-scene> -->
-    </div>
 
 </body>
 
