--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center of Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
                     <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at a company known as Harbortouch. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
                     <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's newest virtual and mixed reality experiences!</p>
-                    <p class="text-faded">In his free time, EJ produces his own music, practices wing chun kung fu, and develops his own video games.</p>
+                    <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices Wing Chun Kung Fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>. He also interns & practices parkour at the <a href="https://www.ppkphilly.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Parkour Academy</a>!</p>
                     <p class="text-faded">Only one goal remains, developing a AAA game title for a major game studio, a goal he has his mind set on.</p>
                     <!--<a href="#projects" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
                 </div>
@@ -132,8 +132,8 @@
 
     <section id="app_section" class="no-padding" style="background-color: #444444">
         <div id="app_container">
-            <div id="app_collection" class="row" style="width: 2000px;"> <!--popup-gallery-->
-                <div id="scroller" style="height: 400px; margin: 0 auto;">
+            <div id="app_collection" class="row" style="width: 100%;"> <!--popup-gallery-->
+                <div id="scroller" style="height: 22em; margin: 0 auto;">
                     <div id="app_list_1" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
@@ -216,7 +216,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="scroller2" style="height: 400px; margin: 0 auto;">
+                <div id="scroller2" style="height: 22em; margin: 0 auto;">
                     <div id="app_list_2" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
