image resized using viewport vw
- images resized using image viewport %s (vw)
- speeds set to be different for each scroller
- fixed class tags for scroller images
- adjusted all link fonts to be teal

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center of Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
                     <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at a company known as Harbortouch. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
                     <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's newest virtual and mixed reality experiences!</p>
-                    <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices wing chun Kung Fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>. He also interns & practices parkour at the <a href="https://www.ppkphilly.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Parkour Academy</a>!</p>
+                    <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices Wing Chun kung fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>. He also interns & practices parkour at the <a href="https://www.ppkphilly.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Parkour Academy</a>!</p>
                     <p class="text-faded">Only one goal remains, developing a AAA game title for a major game studio, a goal he has his mind set on.</p>
                     <!--<a href="#projects" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
                 </div>
@@ -133,13 +133,13 @@
     <section id="app_section" class="no-padding" style="background-color: #444444">
         <div id="app_container">
             <div id="app_collection" class="row" width="100%"> <!--popup-gallery-->
-                <div id="scroller" style="height: 20vw; margin-bottom: -3vw;">
+                <div id="scroller" style="height: 20vw;">
                     <div id="app_list_1" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
                             <li>
                                 <a href="videos/xvrtrailer.mp4" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/1.png" class="img_scroller" alt="Xfinity VR">
+                                    <img src="img/portfolio/thumbnails/1.png" class="img-scroller" alt="Xfinity VR">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="project-name">Xfinity VR</div>
@@ -150,7 +150,7 @@
                             </li>
                             <li>
                                 <a href="https://fusion.crswll.now.sh/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/food_league.png" class="img_scroller" alt="League of Food Comcast Concept">
+                                    <img src="img/portfolio/thumbnails/food_league.png" class="img-scroller" alt="League of Food Comcast Concept">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
@@ -163,7 +163,7 @@
                             </li>
                             <li>
                                 <a href="https://legend-waitress.herokuapp.com" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/12.png" class="img_scroller" alt="Comcast Social Web VR">
+                                    <img src="img/portfolio/thumbnails/12.png" class="img-scroller" alt="Comcast Social Web VR">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
@@ -176,7 +176,7 @@
                             </li>
                             <li>
                                 <a href="MarioCastleAnimation/mariocastle.html" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/mario_castle.png" class="img_scroller" alt="Castle Animation made with Unity">
+                                    <img src="img/portfolio/thumbnails/mario_castle.png" class="img-scroller" alt="Castle Animation made with Unity">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
@@ -189,7 +189,7 @@
                             </li>
                             <li>
                                 <a href="https://three-js-avatar.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/8.png" class="img_scroller" alt="Three.js Avatar Manipulator">
+                                    <img src="img/portfolio/thumbnails/8.png" class="img-scroller" alt="Three.js Avatar Manipulator">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
@@ -202,7 +202,7 @@
                             </li>
                             <li>
                                 <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/7.png" class="img_scroller" alt="A-Frame Web VR Playground">
+                                    <img src="img/portfolio/thumbnails/7.png" class="img-scroller" alt="A-Frame Web VR Playground">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
@@ -582,11 +582,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/MannUnityCert092017.png">Unity Certified Developer</a></td>
+                                <td><a target="_blank" href="img/certifications/MannUnityCert092017.png" style="color: aquamarine;font-weight: bold;">Unity Certified Developer</a></td>
                                 <td>09/2017</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/MannScrumCert032017.png">Certified Scrum Master</a></td>
+                                <td><a target="_blank" href="img/certifications/MannScrumCert032017.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
                                 <td>03/2017</td>
                             </tr>
                         </tbody>
