remove class row causing edge margin

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
     <meta name="author" content="Eustace R Mann Jr">
     <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, Jr, Eustace, EJ, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj">
@@ -132,7 +132,7 @@
 
     <section id="app_section" class="no-padding" style="background-color: #444444">
         <div id="app_container">
-            <div id="app_collection" class="row" width="100%"> <!--popup-gallery-->
+            <div id="app_collection"> <!--popup-gallery-->
                 <div id="scroller" style="height: 20vw;">
                     <div id="app_list_1" class="innerScrollArea">
                         <ul>
@@ -301,7 +301,7 @@
         </div>
     </section>
 
-    <!-- <aside class="bg-dark"></aside> -->
+    <aside class="bg-dark"></aside>
 
     <section id="socialmedia">
         <div class="container">
