--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>A-Frame Web-VR</td>
+                                <td>A-Frame WebVR</td>
                                 <td>2</td>
                             </tr>
                             <tr>
