Converted scroll sizes to em to transfer to mobile

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section id="app_section" class="no-padding" style="background-color: #444444">
         <div id="app_container">
             <div id="app_collection"> <!--popup-gallery-->
-                <div id="scroller" style="height: 20vw;">
+                <div id="scroller" style="height: 20em;">
                     <div id="app_list_1" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
@@ -216,7 +216,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="scroller2" style="height: 25vw;">
+                <div id="scroller2" style="height: 25em;">
                     <div id="app_list_2" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
