--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                 <td>2</td>
                             </tr>
                             <tr>
-                                <td>Oculus Rift</td>
+                                <td>Oculus (Quest / Rift)</td>
                                 <td>2</td>
                             </tr>
                             <tr>
