--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Certified Scrum Master <br/>in Virtual Reality & Games</h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Certified Scrum Master <br/>in Virtual Reality & Games</h1>
                 <hr>
-                <p>Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p>
+                <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p>
                 <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
             </div>
         </div>
