--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Certified Scrum Master <br/>in Virtual Reality & Games</h1>
-                <hr>
-                <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p>
-                <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Certified Scrum Master <br/>in Virtual Reality & Gaming</h1>
+                <!-- <hr>
+                <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
         </div>
     </header>
@@ -128,7 +127,7 @@
     <section id="app_section" class="no-padding" style="background-color: #444444">
         <div id="app_container">
             <div id="app_collection"> <!--popup-gallery-->
-                <div id="scroller" style="height: 17.5em;">
+                <div id="scroller" style="height: 16em;">
                     <div id="app_list_1" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
@@ -211,7 +210,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="scroller2" style="height: 17.5em;">
+                <div id="scroller2" style="height: 16em;">
                     <div id="app_list_2" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
