--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <title>Eustace R Mann Jr</title>
 
     <link rel="author" href="https://plus.google.com/+EJMann"/>
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
