Added new content

--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="videos/darkmagic.mp4" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/darkmagic.png" class="img-scroller" alt="Dark Magic Particle Effect">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="portfolio-box-caption-content">
+                                                <div class="project-name">Dark Magic Particle Effect</div>
+                                                <div class="project-category text-faded">A Dark Magic Visual Effect using particles & the new Visual Effects Graph in Unity 2019.3</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="https://legend-waitress.herokuapp.com" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/12.png" class="img-scroller" alt="Comcast Social Web VR">
                                     <div class="portfolio-box-caption">
@@ -216,6 +229,32 @@
                         <ul>
                             <!-- Define photos here -->
                             <li>
+                                <a href="UnrealBlocks/MovingBlocks.html" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/blocks.png" class="img-scroller" alt="Moving Blocks Animation in UE4">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="portfolio-box-caption-content">
+                                                <div class="project-name">Moving Blocks Animation in Unreal Engine 4</div>
+                                                <div class="project-category text-faded">A simple animation of moving, warping blocks built in Unreal Engine 4 using generated Alembic file</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.northampton.aaa.com/" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/4.png" class="img-scroller" alt="AAA Northampton County Website">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="portfolio-box-caption-content">
+                                                <div class="project-name">AAA Northampton County Website</div>
+                                                <div class="project-category text-faded">A website designed with HTML5, CSS3, and Javascript to assist AAA members in Pennsylvania's Northampton County with their roadside needs</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="https://scene-generator.glitch.me/" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/3.png" class="img-scroller" alt="Scene Generator">
                                     <div class="portfolio-box-caption">
@@ -258,19 +297,6 @@
                                             <div class="portfolio-box-caption-content">
                                                 <div class="project-name">Mr. Blue Shirt Website</div>
                                                 <div class="project-category text-faded">A website designed with HTML5, CSS3, and Jquery to promote the Mr. Blue Shirt film series produced by Michael Stewart and Reckoning Force Productions</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.northampton.aaa.com/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/4.png" class="img-scroller" alt="AAA Northampton County Website">
-                                    <div class="portfolio-box-caption">
-                                        <div class="portfolio-box-caption-content">
-                                            <div class="portfolio-box-caption-content">
-                                                <div class="project-name">AAA Northampton County Website</div>
-                                                <div class="project-category text-faded">A website designed with HTML5, CSS3, and Javascript to assist AAA members in Pennsylvania's Northampton County with their roadside needs</div>
                                             </div>
                                         </div>
                                     </div>
